--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <title>Regenera Cuidado</title>
         <link rel="shortcut icon" href="./assets/icon.png">
-        <link rel="stylesheet" href="bundle.css?v=1">
+        <link rel="stylesheet" href="app.css?v=1">
 
         <script type="application/ld+json">
             {
@@ -36,7 +36,7 @@
             }
         </script>
 
-        <script src="./dist/bundle.js?v=1"></script>
+        <script src="./dist/app.js?v=1"></script>
     </head>
 
     <body>
