--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <title>Regenera Cuidado</title>
         <link rel="shortcut icon" href="./assets/icon.png">
-        <link rel="stylesheet" href="app.css?v=1">
+        <link rel="stylesheet" href="dist/app.css?v=1">
 
         <script type="application/ld+json">
             {
@@ -43,19 +43,39 @@
         <header>
         </header>
 
-        <nav>
+        <!-- <nav>
             <ul>
                 <li>aaa</li>
                 <li>bbb</li>
                 <li>ccc</li>
             </ul>
-        </nav>
+        </nav> -->
 
         <main>
-            <section></section>
-
-            <section class="our-values">
+            <section class="single">
                 <div></div>
+            </section>
+
+            <section class="double">
+                <div></div>
+
+                <div></div>
+            </section>
+
+            <section class="triple">
+                <div></div>
+
+                <div></div>
+
+                <div></div>
+            </section>
+
+            <section class="quad">
+                <div></div>
+
+                <div></div>
+
+                <div class="break"></div>
 
                 <div></div>
 
