Conclusão do jumbo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
                 <source srcset="src/img/notebook.png" media="(max-width: 1200px)" />
                 <img src="src/img/large.png" alt="" />
             </picture>
+            
+            <h1>
+                Curamos suas feridas muito mais rápido
+            </h1>
+
+            <h2>
+                Através de um plano de cuidados que permita as pessoas 
+                vivenciarem ao máximo sua autonomia, gerenciando os riscos 
+                e mantendo o indivíduo saudável física, mental e espiritualmente.
+            </h2>
+
+            <a href="">
+                <i class="fa-regular fa-circle-play"></i>
+                Veja como trabalhamos
+            </a>
         </header>
+
+        <div class="container action-bar">
+            <section class="single">
+                <div>sssssss</div>
+            </section>
+        </div>
 
         <div class="wrapper">
             <div class="container">
