Criação da área de ação do e-book

--- a/index.html
+++ b/index.html
@@ -38,15 +38,76 @@
                 e mantendo o indivíduo saudável física, mental e espiritualmente.
             </h2>
 
-            <a href="">
-                <i class="fa-regular fa-circle-play"></i>
+            <button type="button">
+                <i class="fa-regular fa-circle-play fa-2xl"></i>
+
                 Veja como trabalhamos
-            </a>
+            </button>
         </header>
 
-        <div class="container action-bar">
-            <section class="single">
-                <div>sssssss</div>
+        <div class="container action-bar large">
+            <section class="quad">
+                <div>
+                    <i class="fa-solid fa-phone"></i>
+
+                    <h3>Telefone</h3>
+
+                    <p>(12) 9 9798-5757</p>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-map-location-dot"></i>
+
+                    <h3>Localização</h3>
+
+                    <p>Jacareí, SP</p>
+                </div>
+
+                <div class="break"></div>
+
+                <div>
+                    <i class="fa-solid fa-envelope-open-text"></i>
+
+                    <h3>Fale Conosco</h3>
+
+                    <a href="#">Entre em contato</a>
+                </div>
+
+                <div>
+                    <button type="button">
+                        Baixar e-book
+
+                        <i class="fa-solid fa-arrow-right fa-xl"></i>
+                    </button>
+                </div>
+            </section>
+        </div>
+
+        <div class="container action-bar medium">
+            <section class="triple">
+                <div>
+                    <i class="fa-solid fa-phone"></i>
+
+                    <h3>Telefone</h3>
+
+                    <p>(12) 9 9798-5757</p>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-envelope-open-text"></i>
+
+                    <h3>Fale Conosco</h3>
+
+                    <a href="#">Entre em contato</a>
+                </div>
+
+                <div>
+                    <button type="button">
+                        Baixar e-book
+
+                        <i class="fa-solid fa-arrow-right fa-xl"></i>
+                    </button>
+                </div>
             </section>
         </div>
 
