Criação do menu de navegação superior

--- a/index.html
+++ b/index.html
@@ -45,6 +45,66 @@
             </button>
         </header>
 
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-house fa-xl"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-dove fa-xl"></i>
+                        <span>Nossa História</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-heart-pulse fa-xl"></i>
+                        <span>Nosso Trabalho</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-microphone-lines fa-xl"></i>
+                        <span>Fale Conosco</span>
+                    </a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook fa-xl"></i>
+                        <span>Facebook</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="fa-brands fa-instagram fa-xl"></i>
+                        <span>Instagram</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube fa-xl"></i>
+                        <span>Youtube</span>
+                    </a>
+                </li>
+
+                <li><a href="#">
+                    <i class="fa-solid fa-bars fa-xl"></i>
+                    <span>Mobile Button</span></a>
+                </li>
+            </ul>
+        </nav>
+
         <div class="container action-bar large">
             <section class="quad">
                 <div>
