Adicionadas colunas no rodapé

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </ul>
         </nav>
 
-        <div class="container action-bar">
+        <div class="container action-bar large">
             <section class="quad">
                 <div>
                     <i class="fa-solid fa-phone"></i>
@@ -177,9 +177,40 @@
                     <div>
                         <img src="src/img/logo-footer.png">
 
-                        <br><br><br><br><br>
-                        <br><br><br><br><br>
-                        <br><br><br><br><br>
+                        <div class="column-one">
+                            <h2>Regenera Cuidado</h2>
+
+                            <span>
+                                <i class="fa-solid fa-car-side"></i>
+                                Rua das acácias, 258, 12578-665 Jacareí, SP
+                            </span>
+
+                            <span>
+                                <i class="fa-solid fa-phone-volume"></i>
+                                (99) 9 9999-99
+                            </span>
+
+                            <span>
+                                <i class="fa-solid fa-envelope"></i>
+                                contato@regeneracuidado.com.br
+                            </span>
+                        </div>
+
+                        <div class="column-two">
+                            <a href="">Sobre Nós</a>
+                            <a href="">Nossa História</a>
+                            <a href="">Nosso Trabalho</a>
+                            <a href="">Departamentos</a>
+                            <a href="">Blog</a>
+                        </div>
+
+                        <div class="column-three">
+                            <a href="">Fale conosco</a>
+                            <a href="">Depoimentos</a>
+                            <a href="">FAQ</a>
+                            <a href="">Privacidade</a>
+                            <a href="">Termos e Condições</a>
+                        </div>
                     </div>
                 </section>
             </div>
