Ajustes do bloco triplo

--- a/index.html
+++ b/index.html
@@ -143,30 +143,35 @@
             </section>
         </div>
 
-        <div class="container action-bar medium">
+        <h2 class="triad">Nossos Valores</h2>
+
+        <div class="container triad">
             <section class="triple">
                 <div>
-                    <i class="fa-solid fa-phone"></i>
+                    <h2>
+                        <i class="fa-solid fa-hand-holding-heart"></i>
+                        Compaixão
+                    </h2>
 
-                    <h3>Telefone</h3>
-
-                    <p>(12) 9 9798-5757</p>
+                    <p>sdfsdfdsfdsfsdfds d fds fds ds ds ds sd sd ds ds ds ds ds ds ds d d </p>
                 </div>
 
                 <div>
-                    <i class="fa-solid fa-envelope-open-text"></i>
+                    <h2>
+                        <i class="fa-solid fa-award"></i>
+                        Excelência
+                    </h2>
 
-                    <h3>Fale Conosco</h3>
-
-                    <a href="#">Entre em contato</a>
+                    <p>sdfsdfdsfdsfsdfds</p>
                 </div>
 
                 <div>
-                    <button type="button">
-                        Baixar e-book
+                    <h2>
+                        <i class="fa-solid fa-street-view"></i>
+                        Integridade
+                    </h2>
 
-                        <i class="fa-solid fa-arrow-right fa-xl"></i>
-                    </button>
+                    <p>sdfsdfdsfdsfsdfds</p>
                 </div>
             </section>
         </div>
