--- a/components.html
+++ b/components.html
@@ -37,6 +37,31 @@
         </script>
 
         <script src="./dist/app.js?v=1"></script>
+
+        <style>
+            .wrap div {
+                background-color: red;
+                border-radius: 10px;
+            }
+
+            p {
+                display: block;
+                height: 300px;
+                margin: 0;
+            }
+
+            .one {
+                background-color: rgba(0, 0, 0, .05);
+            }
+
+            .two {
+                background-color: rgba(0, 0, 0, .1);
+            }
+
+            .three {
+                background-color: rgba(26, 146, 226, .4);
+            }
+        </style>
     </head>
 
     <body>
