--- a/index.bk.html
+++ b/index.bk.html
@@ -105,33 +105,32 @@
             </ul>
         </nav>
 
-        <div class="holder action-bar">
-            <section class="wrap box-quad-static">
-                <div class="to-contact">
+        <div class="container action-bar large">
+            <section class="quad">
+                <div>
                     <i class="fa-solid fa-phone"></i>
 
-                    <div>
-                        <h3>Telefone</h3>
-                        <p>(12) 9 9798-5757</p>
-                    </div>
+                    <h3>Telefone</h3>
+
+                    <p>(12) 9 9798-5757</p>
                 </div>
 
-                <div class="to-contact">
+                <div>
                     <i class="fa-solid fa-map-location-dot"></i>
 
-                    <div>
-                        <h3>Localização</h3>
-                        <p>Jacareí, SP</p>
-                    </div>
+                    <h3>Localização</h3>
+
+                    <p>Jacareí, SP</p>
                 </div>
 
-                <div class="to-contact">
+                <div class="break"></div>
+
+                <div>
                     <i class="fa-solid fa-envelope-open-text"></i>
 
-                    <div>
-                        <h3>Fale Conosco</h3>
-                        <p>Entre em contato</p>
-                    </div>
+                    <h3>Fale Conosco</h3>
+
+                    <a href="#">Entre em contato</a>
                 </div>
 
                 <div>
@@ -144,38 +143,26 @@
             </section>
         </div>
 
-        <h2 class="our-values">Nossos Valores</h2>
+        <h2 class="triad">Nossos Valores</h2>
 
-        <div class="holder our-values">
-            <section class="wrap box-triple-static">
-                <div>
-                    <h2>
-                        <i class="fa-solid fa-award"></i>
-                        Excelência
-                    </h2>
-
-                    <hr>
-
-                    <p>
-                        Buscamos em tudo, zelar pela Excelência, atenção e esmero,
-                        objetivando a entrega de um trabalho sem falhas e cada
-                        vez mais assertivo.
-                    </p>
-                </div>
-
+        <div class="container triad">
+            <section class="triple">
                 <div>
                     <h2>
                         <i class="fa-solid fa-hand-holding-heart"></i>
                         Compaixão
                     </h2>
 
-                    <hr>
+                    <p>sdfsdfdsfdsfsdfds d fds fds ds ds ds sd sd ds ds ds ds ds ds ds d d </p>
+                </div>
 
-                    <p>
-                        Não há cuidado verdadeiro, sem compaixão para com aquele 
-                        que está sendo cuidado. A cultura de nosso trabalho objetiva
-                        a compaixão acima de tudo.
-                    </p>
+                <div>
+                    <h2>
+                        <i class="fa-solid fa-award"></i>
+                        Excelência
+                    </h2>
+
+                    <p>sdfsdfdsfdsfsdfds</p>
                 </div>
 
                 <div>
@@ -184,62 +171,10 @@
                         Integridade
                     </h2>
 
-                    <hr>
-
-                    <p>
-                        Nosso trabalho é íntegro e transparente. Buscamos 
-                        verdadeiramente um cuidado da pessoa humana baseado em 
-                        valores que enaltecem sua dignidade.
-                    </p>
+                    <p>sdfsdfdsfdsfsdfds</p>
                 </div>
             </section>
         </div>
-
-        <footer class="holder content">
-            <section class="wrap">
-                <div>
-                    <img src="src/img/logo-footer.png">
-
-                    <div class="column-one">
-                        <h2>Regenera Cuidado</h2>
-
-                        <span>
-                            <i class="fa-solid fa-car-side"></i>
-                            Rua das acácias, 258, 12578-665 Jacareí, SP
-                        </span>
-
-                        <span>
-                            <i class="fa-solid fa-phone-volume"></i>
-                            (99) 9 9999-99
-                        </span>
-
-                        <span>
-                            <i class="fa-solid fa-envelope"></i>
-                            contato@regeneracuidado.com.br
-                        </span>
-                    </div>
-
-                    <div class="column-two">
-                        <a href="">Sobre Nós</a>
-                        <a href="">Nossa História</a>
-                        <a href="">Nosso Trabalho</a>
-                        <a href="">Departamentos</a>
-                        <a href="">Blog</a>
-                    </div>
-
-                    <div class="column-three">
-                        <a href="">Fale conosco</a>
-                        <a href="">Depoimentos</a>
-                        <a href="">FAQ</a>
-                        <a href="">Privacidade</a>
-                        <a href="">Termos e Condições</a>
-                    </div>
-                </div>
-            </section>
-        </footer>
-
-        <br><br><br>
-        <!-- 
 
         <footer class="wrapper content">
             <div class="container">
@@ -314,7 +249,7 @@
                     </div>
                 </section>
             </div>
-        </footer> -->
+        </footer>
 
 <!--         
 
