Criação da rotina de deploy

--- a/src/footer.html
+++ b/src/footer.html
@@ -57,7 +57,7 @@
                 <span>Facebook</span>
             </a>
 
-            <a href="#">
+            <a href="@regenera.cuidado">
                 <i class="fa-brands fa-instagram fa-xl"></i>
                 <span>Instagram</span>
             </a>
@@ -69,7 +69,9 @@
         </div>
 
         <div class="copy">
-            Copyright © 2024 Regenera. 
+            Copyright &copy; 
+            2024 
+            Regenera Cuidado
             <span>Todos os direitos reservados.</span>
         </div>
     </section>
