--- a/src/navigation-bar.html
+++ b/src/navigation-bar.html
@@ -1,28 +1,28 @@
 <nav class="navigation-bar">
     <ul>
         <li>
-            <a href="#">
+            <a href="index.html">
                 <i class="fa-solid fa-house fa-xl"></i>
                 <span>Home</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="nossa-historia.html">
                 <i class="fa-solid fa-dove fa-xl"></i>
                 <span>Nossa História</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="nosso-trabalho.html">
                 <i class="fa-solid fa-heart-pulse fa-xl"></i>
                 <span>Nosso Trabalho</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="faleconosco.html">
                 <i class="fa-solid fa-microphone-lines fa-xl"></i>
                 <span>Fale Conosco</span>
             </a>
@@ -38,14 +38,14 @@
         </li>
 
         <li>
-            <a href="#">
+            <a href="@regenera.cuidado">
                 <i class="fa-brands fa-instagram fa-xl"></i>
                 <span>Instagram</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="">
                 <i class="fa-brands fa-youtube fa-xl"></i>
                 <span>Youtube</span>
             </a>
