--- a/src/page-home.html
+++ b/src/page-home.html
@@ -10,10 +10,10 @@
 
         <meta itemprop="name" content="Regenera Cuidado">
         <meta itemprop="description" content="xxxxx xxx">
-        <meta itemprop="image" content="aaa, bbb">
+        <meta itemprop="image" content="img/profile.png">
 
         <title><%= htmlWebpackPlugin.options.title %></title>
-        <link rel="shortcut icon" href="./assets/icon.png">
+        <link rel="shortcut icon" href="img/apple-touch.png">
     </head>
 
     <body>
