--- a/src/page-faleconosco.html
+++ b/src/page-faleconosco.html
@@ -10,10 +10,10 @@
 
         <meta itemprop="name" content="Regenera Cuidado">
         <meta itemprop="description" content="xxxxx xxx">
-        <meta itemprop="image" content="aaa, bbb">
+        <!-- <meta itemprop="image" content="aaa, bbb"> -->
 
         <title>Nossa História | <%= htmlWebpackPlugin.options.title %></title>
-        <link rel="shortcut icon" href="./assets/icon.png">
+        <!-- <link rel="shortcut icon" href="./assets/icon.png"> -->
     </head>
 
     <body>
