Ajustes para telas de celular

--- a/src/footer.html
+++ b/src/footer.html
@@ -6,25 +6,24 @@
             <div class="column-one">
                 <h2>Regenera Cuidado</h2>
 
-                <p>
-                    <span>
-                        <i class="fa-solid fa-car-side"></i>
-                        Rua das acácias, 258, 12578-665 Jacareí, SP
-                    </span>
+                <p class="address">
+                    <i class="fa-solid fa-car-side"></i>
+
+                    <span>Rua das acácias, 258, </span>
+
+                    <span class="new-line">12578-665, Jacareí, SP</span>
                 </p>
 
-                <p>
-                    <span>
-                        <i class="fa-solid fa-phone-volume"></i>
-                        (99) 9 9999-99
-                    </span>
+                <p class="phone">
+                    <i class="fa-solid fa-phone-volume"></i>
+
+                    <span>(99) 9 9999-99</span>
                 </p>
 
-                <p>
-                    <span>
-                        <i class="fa-solid fa-envelope"></i>
-                        contato@regeneracuidado.com.br
-                    </span>
+                <p class="email">
+                    <i class="fa-solid fa-envelope"></i>
+
+                    <span>contato@regeneracuidado.com.br</span>
                 </p>
             </div>
 
